...
                ),
              ]
            : const [
                NavigationDestination(
                  icon: Icon(Symbols.explore_rounded),
                  selectedIcon: Icon(Symbols.explore_rounded, fill: 1),
                  label: 'Discover',
                ),
                NavigationDestination(
                  icon: Icon(Symbols.surfing_rounded),
                  selectedIcon: Icon(Symbols.surfing_rounded, fill: 1),
                  label: 'Sessions',
                ),
...
